@@ -32,6 +32,11 @@ CHANGES
       present in a list of items to be processed, typically 
       during session.expunge_all() and dependent methods.
 
+    - Some improvements to the _CompileOnAttr mechanism which
+      should reduce the probability of "Attribute x was 
+      not replaced during compile" warnings. (this generally
+      applies to SQLA hackers, like Elixir devs).
+      
 - ext
     - Class-bound attributes sent as arguments to 
       relation()'s remote_side and foreign_keys parameters 
